fix: tooltip z-index

--- a/src/index.css
+++ b/src/index.css
@@ -134,6 +134,6 @@ input[type='number']::-webkit-outer-spin-button {
 .dropdown [role='menu'] {
   @apply z-10;
 }
-.tooltip .react-tooltip {
+.wrapper-tooltip .react-tooltip {
   @apply z-10;
 }
